# AI-Traffic-Control

./: .cursorrules  CONTRIBUTING.md  Cargo.toml  brain.md
.cursor/rules/: brain-keeper.mdc  conventional-commits.mdc  no-auto-tests.mdc  plan-completion-tracking.mdc  planning-first.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
docs/planning/: 2025-08-09-coding-agent-mvp.md  2025-08-12-session-persistence-sqlite.md  2025-08-12-vector-memory.md  2025-08-13-agent-planning-execution-trees.md  2025-08-13-ai-agent-architecture-and-commands.md
docs/process/: feature-planning.md
docs/templates/: FEATURE_PLANNING_TEMPLATE.md
migrations/: 0001_init.sql  0002_rules_and_context.sql
src/: discovery.rs  file_ops.rs  git_ops.rs  main.rs  models.rs  server.rs  session.rs  settings.rs  storage.rs
src/agent/: engine.rs  mod.rs
src/agent/tools/: discovery_tools.rs  file_tools.rs  git_tools.rs  include_file.rs  include_url.rs  mod.rs  rules.rs
