[package]
name = "air_traffic_control"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros", "json"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
git2 = "0.18"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
scraper = "0.19"
url = "2"
async-trait = "0.1"
metrics = "0.23"
metrics-exporter-prometheus = "0.14"

[dev-dependencies]
tempfile = "3"
